Primary button (normal/selected), partially implemented in Post Editor, changed primary button styling, updated Post Editor title label, updated default color to be hex #222222 instead of #464646

--- a/.gitattributes
+++ b/.gitattributes
@@ -790,6 +790,8 @@ ja.lproj/Localizable.strings -text svneol=unset#unset
 /navbar_menu_white@2x.png -text
 /navbar_new.png -text
 /navbar_new@2x.png -text
+/navbar_primary_button_bg@2x.png -text
+/navbar_primary_button_bg_active@2x.png -text
 /navbar_read.png -text
 /navbar_read@2x.png -text
 /navbar_read_dim.png -text
