--- a/.gitattributes
+++ b/.gitattributes
@@ -774,6 +774,10 @@ ja.lproj/Localizable.strings -text svneol=unset#unset
 /main.m -text
 /movie.png -text svneol=unset#unset
 /movie@2x.png -text svneol=unset#unset
+/navbar_back_button_bg.png -text
+/navbar_back_button_bg@2x.png -text
+/navbar_back_button_bg_active.png -text
+/navbar_back_button_bg_active@2x.png -text
 /navbar_bg.png -text
 /navbar_bg@2x.png -text
 /navbar_button_bg.png -text
