--- a/.gitattributes
+++ b/.gitattributes
@@ -841,6 +841,8 @@ pt.lproj/Localizable.strings -text svneol=unset#unset
 /settings@2x.png -text
 /settings_bg.png -text
 /settings_bg@2x.png -text
+/sidebar-logo.png -text
+/sidebar-logo@2x.png -text
 /sidebar_bg.png -text
 /sidebar_bg@2x.png -text
 /sidebar_camera.png -text
