Add default styles for edit button

--- a/.gitattributes
+++ b/.gitattributes
@@ -187,6 +187,8 @@ Classes/UITableViewTextFieldCell.h -text
 Classes/UITableViewTextFieldCell.m -text
 Classes/UIToolbar+Styled.h -text
 Classes/UIToolbar+Styled.m -text
+Classes/UIViewController+Styled.h -text
+Classes/UIViewController+Styled.m -text
 Classes/UIViewController_iPadExtensions.h -text
 Classes/UIViewController_iPadExtensions.m -text
 Classes/WPAddCategoryViewController.h -text
