Adding support for popping off extra panels when you drag the stack to the right off of the sidebar. Added a protocol to reset the current detail view (unselect rows, set current selection iVars to nil, etc) once the panels are popped.

--- a/.gitattributes
+++ b/.gitattributes
@@ -820,6 +820,8 @@ nl.lproj/Localizable.strings -text svneol=unset#unset
 /page_control_blue_active@2x.png -text
 /pages.png -text
 /pages@2x.png -text
+/panel_icon.png -text
+/panel_icon@2x.png -text
 /paperclip.png -text
 /paperclip@2x.png -text
 /photos.png -text
