Added missing 1x primary nav bar button, updated others slightly

--- a/.gitattributes
+++ b/.gitattributes
@@ -797,6 +797,7 @@ ja.lproj/Localizable.strings -text svneol=unset#unset
 /navbar_menu@2x.png -text
 /navbar_menu_white.png -text
 /navbar_menu_white@2x.png -text
+/navbar_primary_button_bg.png -text
 /navbar_primary_button_bg@2x.png -text
 /navbar_primary_button_bg_active.png -text
 /navbar_primary_button_bg_active@2x.png -text
