--- a/.gitattributes
+++ b/.gitattributes
@@ -818,6 +818,8 @@ ja.lproj/Localizable.strings -text svneol=unset#unset
 /navbar_read_dim@2x.png -text
 /navbar_shadow.png -text
 /navbar_shadow@2x.png -text
+/navbar_toggle.png -text
+/navbar_toggle@2x.png -text
 nb.lproj/Localizable.strings -text svneol=unset#unset
 /next.png -text svneol=unset#unset
 /next@2x.png -text svneol=unset#unset
