Set up the UIBarButtonItem category to use a custom button for the UIBarButtonItemStylePlain style. Set up the comment views to use the new styling, which required removing IBOutlets from the XIB and creating the buttons programatically. Refs #1202

--- a/.gitattributes
+++ b/.gitattributes
@@ -994,6 +994,8 @@ sv.lproj/Localizable.strings -text svneol=unset#unset
 /toolbar_flag@2x.png -text
 /toolbar_flag_lite.png -text
 /toolbar_flag_lite@2x.png -text
+/toolbar_reply.png -text
+/toolbar_reply@2x.png -text
 /toolbar_shadow.png -text
 /toolbar_shadow@2x.png -text
 /toolbar_swipe_approve.png -text
