--- a/.gitattributes
+++ b/.gitattributes
@@ -990,6 +990,8 @@ sv.lproj/Localizable.strings -text svneol=unset#unset
 /toolbar_bg@2x.png -text
 /toolbar_delete.png -text
 /toolbar_delete@2x.png -text
+/toolbar_edit.png -text
+/toolbar_edit@2x.png -text
 /toolbar_flag.png -text
 /toolbar_flag@2x.png -text
 /toolbar_flag_lite.png -text
