Web to Native bridge refactor and bug fixes
Encapsulating the native bridge flow into it's own class. This allows other
view controllers to use it instead of inheriting from WPWebAppViewController.

WPWebAppViewController now uses the WPWebBridge so all methods that authorize,
detect, and execute methods based on NSURLRequest objects are now handled by
WPWebBridge.

Fixed bugs on iPad in WPReaderDetailViewController:
- Action sheet menu now displays
- Title is set correctly
- Comments load

WPReaderDetailViewController now also uses WPWebBridge. Previously it did not
correctly handle wpios:// scheme requests.

--- a/.gitattributes
+++ b/.gitattributes
@@ -238,6 +238,8 @@ Classes/WPTableViewController.m -text
 Classes/WPTableViewControllerSubclass.h -text
 Classes/WPWebAppViewController.h -text
 Classes/WPWebAppViewController.m -text
+Classes/WPWebBridge.h -text
+Classes/WPWebBridge.m -text
 Classes/WPWebView.h -text
 Classes/WPWebView.m -text
 Classes/WPWebViewController.h -text
