Adds toolbar images back into the project. Fixes #1243. Adds category for custom UIPopoverBackgroundVeiw to style all popovers from one place. Fixes #1189. Post Details edit button background is set to UIControlStateHighlighted from UIControlStateSelected. Refs #1241.

--- a/.gitattributes
+++ b/.gitattributes
@@ -181,6 +181,8 @@ Classes/UIImageView+Gravatar.h -text
 Classes/UIImageView+Gravatar.m -text
 Classes/UINavigationBar+Styled.h -text
 Classes/UINavigationBar+Styled.m -text
+Classes/UIPopoverController+Styled.h -text
+Classes/UIPopoverController+Styled.m -text
 Classes/UITableViewActivityCell.h -text
 Classes/UITableViewActivityCell.m -text
 Classes/UITableViewSwitchCell.h -text
