--- a/.gitattributes
+++ b/.gitattributes
@@ -851,6 +851,7 @@ pl.lproj/Localizable.strings -text svneol=unset#unset
 /previous.png -text svneol=unset#unset
 /previous@2x.png -text svneol=unset#unset
 pt.lproj/Localizable.strings -text svneol=unset#unset
+/pull.wav -text
 /quickPhotoButton.png -text svneol=unset#unset
 /quickPhotoButton@2x.png -text svneol=unset#unset
 /quickPhotoButtonBackground.png -text
@@ -863,6 +864,7 @@ pt.lproj/Localizable.strings -text svneol=unset#unset
 /read@2x.png -text
 /redoDisabled~ipad.png -text svneol=unset#unset
 /redo~ipad.png -text svneol=unset#unset
+/refresh.wav -text
 /right.png -text svneol=unset#unset
 /right@2x.png -text svneol=unset#unset
 /settings.png -text
