--- a/.gitattributes
+++ b/.gitattributes
@@ -804,8 +804,6 @@ ja.lproj/Localizable.strings -text svneol=unset#unset
 /navbar_button_bg_landscape@2x.png -text
 /navbar_button_bg_landscape_active.png -text
 /navbar_button_bg_landscape_active@2x.png -text
-/navbar_menu_white.png -text
-/navbar_menu_white@2x.png -text
 /navbar_primary_button_bg.png -text
 /navbar_primary_button_bg@2x.png -text
 /navbar_primary_button_bg_active.png -text
@@ -822,6 +820,8 @@ ja.lproj/Localizable.strings -text svneol=unset#unset
 /navbar_shadow@2x.png -text
 /navbar_toggle.png -text
 /navbar_toggle@2x.png -text
+/navbar_toggle_white.png -text
+/navbar_toggle_white@2x.png -text
 nb.lproj/Localizable.strings -text svneol=unset#unset
 /next.png -text svneol=unset#unset
 /next@2x.png -text svneol=unset#unset
