--- a/.gitattributes
+++ b/.gitattributes
@@ -616,8 +616,6 @@ WordPressTest/entitiesDecoded.xml -text
 /XMLValueDecoder.m -text
 /approve.png -text svneol=unset#unset
 /approve@2x.png -text svneol=unset#unset
-/asterisk.png -text
-/asterisk@2x.png -text
 /attachment.png -text svneol=unset#unset
 /attachment@2x.png -text svneol=unset#unset
 /autosave.png -text
@@ -1042,10 +1040,16 @@ tr.lproj/Localizable.strings -text
 /welcome_btn_normal@2x.png -text
 /welcome_btn_over.png -text
 /welcome_btn_over@2x.png -text
+/welcome_button_add.png -text
+/welcome_button_add@2x.png -text
+/welcome_button_asterisk.png -text
+/welcome_button_asterisk@2x.png -text
 /welcome_button_bg.png -text
 /welcome_button_bg@2x.png -text
 /welcome_button_bg_full.png -text
 /welcome_button_bg_full@2x.png -text
+/welcome_button_bg_full_highlighted.png -text
+/welcome_button_bg_full_highlighted@2x.png -text
 /whitebg.png -text
 /wp_logo.png -text
 /wp_logo@2x.png -text
