Updated app icons files, including dev icons (so I could do on-device testing and not just simulator). Added @2x 72px dev icon (iPad Retina). This is a "small" update to the icons to match the premise of the release, we'll revisit the app icon in 3.2 or 3.3. Fixes #1083

--- a/.gitattributes
+++ b/.gitattributes
@@ -297,6 +297,7 @@ Creation/CXMLNode_CreationExtensions.m -text
 /Icon-Small.png -text
 /Icon-Small@2x.png -text
 /Icon-dev-72.png -text svneol=unset#unset
+/Icon-dev-72@2x.png -text
 /Icon-dev.png -text svneol=unset#unset
 /Icon-dev@2x.png -text svneol=unset#unset
 /Icon.png -text svneol=unset#unset
