--- a/.gitattributes
+++ b/.gitattributes
@@ -324,6 +324,8 @@ Settings.bundle/Root.plist -text
 Settings.bundle/en.lproj/Root.strings -text
 /SidebarToolbarButton.png -text svneol=unset#unset
 /SidebarToolbarButton@2x.png -text svneol=unset#unset
+/SidebarToolbarButtonHighlighted.png -text
+/SidebarToolbarButtonHighlighted@2x.png -text
 /SidebarViewController.xib -text
 /StatsTableViewController-iPad.xib -text
 /ToolbarIconCamera.png -text svneol=unset#unset
