Add a new site settings option to update jetpack credentials for self hosted blogs. Removes jetpack related code from wpcomloginviewcontroller, we don't want to change the logged in user when updating jetpack credentials. Moves jetpack api code into its own utility class for reuse between settings adn the statswebviewcontroller. Updates EditSiteViewController, cleans up some code, and makes it cancellable (anticipates #1341). Incorporates fix from [3405] into trunk. Minor clean up on this code to simplify and fix a leak. All this to say: Fixes #1338

--- a/.gitattributes
+++ b/.gitattributes
@@ -108,6 +108,11 @@ Classes/FileLogger.h -text
 Classes/FileLogger.m -text
 Classes/HelpViewController.h -text
 Classes/HelpViewController.m -text
+Classes/JetpackAuthUtil.h -text
+Classes/JetpackAuthUtil.m -text
+Classes/JetpackSettingsViewController.h -text
+Classes/JetpackSettingsViewController.m -text
+Classes/JetpackSettingsViewController.xib -text
 Classes/MediaObjectViewController.h -text
 Classes/MediaObjectViewController.m -text
 Classes/MigrateBlogsFromFiles.h -text
@@ -165,6 +170,7 @@ Classes/SectionInfo.h -text
 Classes/SectionInfo.m -text
 Classes/SettingsViewController.h -text
 Classes/SettingsViewController.m -text
+Classes/SettingsViewControllerDelegate.h -text
 Classes/SidebarSectionHeaderView.h -text
 Classes/SidebarSectionHeaderView.m -text
 Classes/SidebarTableViewCell.h -text
