Fixes for the "no connection" tickets. No connection messages use consistent text. Adds a convenience class for displaying a no-connection prompt. Since there was a lot of overlap I'm doing this as one large commit instead of on a ticket by ticket basis. Will close and comment tickets as appropriate. Prompt remains a UIAlertView and not a custom non-modal view (yet).

--- a/.gitattributes
+++ b/.gitattributes
@@ -166,6 +166,8 @@ Classes/QuickPhotoViewController.h -text
 Classes/QuickPhotoViewController.m -text
 Classes/QuickPicturePreviewView.h -text
 Classes/QuickPicturePreviewView.m -text
+Classes/ReachabilityUtils.h -text
+Classes/ReachabilityUtils.m -text
 Classes/SectionInfo.h -text
 Classes/SectionInfo.m -text
 Classes/SettingsViewController.h -text
