New launch image for iPhone 5/iOS6. Needs to be added to project in trunk.

--- a/.gitattributes
+++ b/.gitattributes
@@ -294,6 +294,7 @@ Creation/CXMLDocument_CreationExtensions.h -text
 Creation/CXMLDocument_CreationExtensions.m -text
 Creation/CXMLNode_CreationExtensions.h -text
 Creation/CXMLNode_CreationExtensions.m -text
+/Default-568h@2x.png -text
 /Default-Landscape.png -text svneol=unset#unset
 /Default-Landscape@2x.png -text svneol=unset#unset
 /Default-Portrait.png -text svneol=unset#unset
