--- a/.gitattributes
+++ b/.gitattributes
@@ -280,6 +280,8 @@ Classes/WordPress.xcdatamodeld/WordPress[!!-~]5.xcdatamodel/elements -text svneo
 Classes/WordPress.xcdatamodeld/WordPress[!!-~]5.xcdatamodel/layout -text svneol=unset#unset
 Classes/WordPress.xcdatamodeld/WordPress[!!-~]6.xcdatamodel/elements -text svneol=unset#unset
 Classes/WordPress.xcdatamodeld/WordPress[!!-~]6.xcdatamodel/layout -text svneol=unset#unset
+Classes/WordPress.xcdatamodeld/WordPress[!!-~]7.xcdatamodel/elements -text svneol=unset#unset
+Classes/WordPress.xcdatamodeld/WordPress[!!-~]7.xcdatamodel/layout -text svneol=unset#unset
 Classes/WordPress.xcdatamodeld/WordPress.xcdatamodel/elements -text
 Classes/WordPress.xcdatamodeld/WordPress.xcdatamodel/layout -text
 Classes/WordPressAppDelegate.h -text
