--- a/.gitattributes
+++ b/.gitattributes
@@ -474,6 +474,7 @@ Pods/Pods-prefix.pch -text
 Pods/Pods-resources.sh -text
 Pods/Pods.xcconfig -text
 Pods/Pods.xcodeproj/project.pbxproj -text
+Pods/Pods.xcodeproj/xcshareddata/xcschemes/Pods.xcscheme -text
 Pods/PodsDummy_Pods.m -text
 Pods/Reachability/README.md -text
 Pods/Reachability/Reachability.h -text
@@ -693,6 +694,8 @@ Vendor/xmlrpc/XMLRPCResponse.m -text
 /WelcomeViewController.xib -text
 /WordPress[!!-~]copy-Info.plist -text
 WordPress.xcodeproj/project.pbxproj -text
+WordPress.xcodeproj/xcshareddata/xcschemes/WordPress.xcscheme -text
+WordPress.xcodeproj/xcshareddata/xcschemes/WordPressTest.xcscheme -text
 WordPress.xcworkspace/contents.xcworkspacedata -text
 WordPressApi/AFAuthenticationAlertView.h -text
 WordPressApi/AFAuthenticationAlertView.m -text
