Fixes #1473.  Adds a README with instructions for building the project with cocoapods, and links to the dev blog and source code.

--- a/.gitattributes
+++ b/.gitattributes
@@ -473,6 +473,7 @@ Pods/Reachability/Reachability.podspec -text
 /PostSettingsViewController.xib -text
 /PostViewController-iPad.xib -text
 /QuickPhotoViewController.xib -text
+/README -text
 Resources-iPad/MainWindow-iPad.xib -text
 /SidebarToolbarButton.png -text svneol=unset#unset
 /SidebarToolbarButton@2x.png -text svneol=unset#unset
