--- a/.gitattributes
+++ b/.gitattributes
@@ -99,6 +99,14 @@ Classes/NSString+Util.h -text
 Classes/NSString+Util.m -text
 Classes/NSString+XMLExtensions.h -text
 Classes/NSString+XMLExtensions.m -text
+Classes/Note.h -text
+Classes/Note.m -text
+Classes/NotificationsTableViewCell.h -text
+Classes/NotificationsTableViewCell.m -text
+Classes/NotificationsTableViewDatasource.h -text
+Classes/NotificationsTableViewDatasource.m -text
+Classes/NotificationsViewController.h -text
+Classes/NotificationsViewController.m -text
 Classes/Page.h -text
 Classes/Page.m -text
 Classes/PageViewController.h -text
@@ -253,6 +261,8 @@ Classes/WordPress.xcdatamodeld/WordPress[!!-~]8.xcdatamodel/elements -text svneo
 Classes/WordPress.xcdatamodeld/WordPress[!!-~]8.xcdatamodel/layout -text svneol=unset#unset
 Classes/WordPress.xcdatamodeld/WordPress.xcdatamodel/elements -text
 Classes/WordPress.xcdatamodeld/WordPress.xcdatamodel/layout -text
+Classes/WordPressApi/WordPressComRestClient.h -text
+Classes/WordPressApi/WordPressComRestClient.m -text
 Classes/WordPressAppDelegate.h -text
 Classes/WordPressAppDelegate.m -text
 /CommentViewController.xib -text
@@ -287,6 +297,7 @@ Classes/WordPressAppDelegate.m -text
 /Media.h -text
 /Media.m -text
 /MediaObjectView.xib -text
+/NotificationsViewController.xib -text
 /Podfile -text
 /Podfile.lock -text
 Pods/AFNetworking/AFNetworking.podspec -text
@@ -771,6 +782,14 @@ nb.lproj/Localizable.strings -text svneol=unset#unset
 /next.png -text svneol=unset#unset
 /next@2x.png -text svneol=unset#unset
 nl.lproj/Localizable.strings -text svneol=unset#unset
+/note_icon_comment.png -text svneol=unset#unset
+/note_icon_comment@2x.png -text svneol=unset#unset
+/note_icon_follow.png -text svneol=unset#unset
+/note_icon_follow@2x.png -text svneol=unset#unset
+/note_icon_like.png -text svneol=unset#unset
+/note_icon_like@2x.png -text svneol=unset#unset
+/note_icon_placeholder.png -text svneol=unset#unset
+/note_icon_placeholder@2x.png -text svneol=unset#unset
 /panel_icon.png -text
 /panel_icon@2x.png -text
 /paperclip.png -text
