Revert "Remove NotificationsFollowDetailViewController.xib, it's just a plain table view"
This reverts commit 1f5ac183be95ba794031b69f12661a3404d5c3e2.

--- a/.gitattributes
+++ b/.gitattributes
@@ -105,6 +105,7 @@ Classes/NotificationsCommentDetailViewController.h -text
 Classes/NotificationsCommentDetailViewController.m -text
 Classes/NotificationsFollowDetailViewController.h -text
 Classes/NotificationsFollowDetailViewController.m -text
+Classes/NotificationsFollowDetailViewController.xib -text
 Classes/NotificationsTableViewCell.h -text
 Classes/NotificationsTableViewCell.m -text
 Classes/NotificationsTableViewDatasource.h -text
