--- a/.gitattributes
+++ b/.gitattributes
@@ -105,7 +105,8 @@ Classes/NotificationsCommentDetailViewController.h -text
 Classes/NotificationsCommentDetailViewController.m -text
 Classes/NotificationsFollowDetailViewController.h -text
 Classes/NotificationsFollowDetailViewController.m -text
-Classes/NotificationsFollowDetailViewController.xib -text
+Classes/NotificationsFollowTableViewCell.h -text
+Classes/NotificationsFollowTableViewCell.m -text
 Classes/NotificationsTableViewCell.h -text
 Classes/NotificationsTableViewCell.m -text
 Classes/NotificationsTableViewDatasource.h -text
@@ -303,6 +304,7 @@ Classes/WordPressAppDelegate.m -text
 /Media.m -text
 /MediaObjectView.xib -text
 /NotificationsCommentDetailViewController.xib -text
+/NotificationsFollowDetailViewController.xib -text
 /NotificationsViewController.xib -text
 /Podfile -text
 /Podfile.lock -text
@@ -802,6 +804,8 @@ nb.lproj/Localizable.strings -text svneol=unset#unset
 /next.png -text svneol=unset#unset
 /next@2x.png -text svneol=unset#unset
 nl.lproj/Localizable.strings -text svneol=unset#unset
+/note_following_checkmark.png -text svneol=unset#unset
+/note_following_checkmark@2x.png -text svneol=unset#unset
 /note_icon_comment.png -text svneol=unset#unset
 /note_icon_comment@2x.png -text svneol=unset#unset
 /note_icon_follow.png -text svneol=unset#unset
