--- a/.gitattributes
+++ b/.gitattributes
@@ -808,8 +808,8 @@ nl.lproj/Localizable.strings -text svneol=unset#unset
 /note_button_icon_follow@2x.png -text svneol=unset#unset
 /note_button_icon_following.png -text svneol=unset#unset
 /note_button_icon_following@2x.png -text svneol=unset#unset
-/note_icon_award.png -text svneol=unset#unset
-/note_icon_award@2x.png -text svneol=unset#unset
+/note_icon_achievement.png -text svneol=unset#unset
+/note_icon_achievement@2x.png -text svneol=unset#unset
 /note_icon_comment.png -text svneol=unset#unset
 /note_icon_comment@2x.png -text svneol=unset#unset
 /note_icon_follow.png -text svneol=unset#unset
