--- a/.gitattributes
+++ b/.gitattributes
@@ -499,6 +499,7 @@ Resources-iPad/MainWindow-iPad.xib -text
 /SidebarToolbarButtonHighlighted.png -text
 /SidebarToolbarButtonHighlighted@2x.png -text
 /SidebarViewController.xib -text
+/ToastView.xib -text
 UIAutomationTests/Blog.js -text
 UIAutomationTests/Config.js -text
 UIAutomationTests/Post.js -text
@@ -654,6 +655,12 @@ WordPressTest/en.lproj/InfoPlist.strings -text
 WordPressTest/entities.xml -text
 WordPressTest/entitiesDecoded.xml -text
 /WordPress_Prefix.pch -text
+/action_icon_followed.png -text svneol=unset#unset
+/action_icon_followed@2x.png -text svneol=unset#unset
+/action_icon_replied.png -text svneol=unset#unset
+/action_icon_replied@2x.png -text svneol=unset#unset
+/action_icon_unfollowed.png -text svneol=unset#unset
+/action_icon_unfollowed@2x.png -text svneol=unset#unset
 /approve.png -text svneol=unset#unset
 /approve@2x.png -text svneol=unset#unset
 /attachment.png -text svneol=unset#unset
