--- a/.gitattributes
+++ b/.gitattributes
@@ -80,6 +80,8 @@ Classes/FakeMigration.h -text
 Classes/FakeMigration.m -text
 Classes/FileLogger.h -text
 Classes/FileLogger.m -text
+Classes/FollowButton.h -text
+Classes/FollowButton.m -text
 Classes/HelpViewController.h -text
 Classes/HelpViewController.m -text
 Classes/JetpackAuthUtil.h -text
