--- a/.gitattributes
+++ b/.gitattributes
@@ -103,6 +103,12 @@ Classes/NSString+XMLExtensions.h -text
 Classes/NSString+XMLExtensions.m -text
 Classes/Note.h -text
 Classes/Note.m -text
+Classes/NoteCommentCell.h -text
+Classes/NoteCommentCell.m -text
+Classes/NoteCommentPostBanner.h -text
+Classes/NoteCommentPostBanner.m -text
+Classes/NoteCommentView.h -text
+Classes/NoteCommentView.m -text
 Classes/NotificationsCommentDetailViewController.h -text
 Classes/NotificationsCommentDetailViewController.m -text
 Classes/NotificationsFollowDetailViewController.h -text
@@ -980,6 +986,8 @@ nl.lproj/Localizable.strings -text svneol=unset#unset
 /note_button_icon_follow@2x.png -text svneol=unset#unset
 /note_button_icon_following.png -text svneol=unset#unset
 /note_button_icon_following@2x.png -text svneol=unset#unset
+/note_comment_parent_indicator.png -text svneol=unset#unset
+/note_comment_parent_indicator@2x.png -text svneol=unset#unset
 /note_icon_achievement.png -text svneol=unset#unset
 /note_icon_achievement@2x.png -text svneol=unset#unset
 /note_icon_comment.png -text svneol=unset#unset
