Note comment detail view sharpened up

--- a/.gitattributes
+++ b/.gitattributes
@@ -988,6 +988,9 @@ nl.lproj/Localizable.strings -text svneol=unset#unset
 /note_button_icon_following@2x.png -text svneol=unset#unset
 /note_comment_parent_indicator.png -text svneol=unset#unset
 /note_comment_parent_indicator@2x.png -text svneol=unset#unset
+/note_comment_table_threaded.png -text svneol=unset#unset
+/note_header_shadow.png -text svneol=unset#unset
+/note_header_shadow@2x.png -text svneol=unset#unset
 /note_icon_achievement.png -text svneol=unset#unset
 /note_icon_achievement@2x.png -text svneol=unset#unset
 /note_icon_comment.png -text svneol=unset#unset
