Added notification settings view to app settings.
User can configure the notifications that they would like to receive in
the app settings. Uses new WPCOM XML-RPC APIs to get and set the
settings.

Also tweaked the toast animation, and converted the notifications blogs
list send to be a multicall along with getting the notification
settings.

--- a/.gitattributes
+++ b/.gitattributes
@@ -107,6 +107,8 @@ Classes/NoteCommentCell.h -text
 Classes/NoteCommentCell.m -text
 Classes/NoteCommentPostBanner.h -text
 Classes/NoteCommentPostBanner.m -text
+Classes/NotificationSettingsViewController.h -text
+Classes/NotificationSettingsViewController.m -text
 Classes/NotificationsCommentDetailViewController.h -text
 Classes/NotificationsCommentDetailViewController.m -text
 Classes/NotificationsFollowDetailViewController.h -text
