Notifications Comment Reply UI
- Reply text field for authoring replies
- Interface changes for a 'modal' reply writing mode

Still needs the API methods to be hooked up correct

--- a/.gitattributes
+++ b/.gitattributes
@@ -982,6 +982,8 @@ nb.lproj/Localizable.strings -text svneol=unset#unset
 /next.png -text svneol=unset#unset
 /next@2x.png -text svneol=unset#unset
 nl.lproj/Localizable.strings -text svneol=unset#unset
+/note-reply-field.png -text svneol=unset#unset
+/note-reply-field@2x.png -text svneol=unset#unset
 /note_button_icon_follow.png -text svneol=unset#unset
 /note_button_icon_follow@2x.png -text svneol=unset#unset
 /note_button_icon_following.png -text svneol=unset#unset
