--- a/.gitattributes
+++ b/.gitattributes
@@ -103,6 +103,8 @@ Classes/NSString+XMLExtensions.h -text
 Classes/NSString+XMLExtensions.m -text
 Classes/Note.h -text
 Classes/Note.m -text
+Classes/NoteComment.h -text
+Classes/NoteComment.m -text
 Classes/NoteCommentCell.h -text
 Classes/NoteCommentCell.m -text
 Classes/NoteCommentPostBanner.h -text
@@ -982,14 +984,16 @@ nb.lproj/Localizable.strings -text svneol=unset#unset
 /next.png -text svneol=unset#unset
 /next@2x.png -text svneol=unset#unset
 nl.lproj/Localizable.strings -text svneol=unset#unset
+/note-comment-grandparent-footer.png -text svneol=unset#unset
+/note-comment-grandparent-footer@2x.png -text svneol=unset#unset
+/note-comment-parent-footer.png -text svneol=unset#unset
+/note-comment-parent-footer@2x.png -text svneol=unset#unset
 /note-reply-field.png -text svneol=unset#unset
 /note-reply-field@2x.png -text svneol=unset#unset
 /note_button_icon_follow.png -text svneol=unset#unset
 /note_button_icon_follow@2x.png -text svneol=unset#unset
 /note_button_icon_following.png -text svneol=unset#unset
 /note_button_icon_following@2x.png -text svneol=unset#unset
-/note_comment_parent_indicator.png -text svneol=unset#unset
-/note_comment_parent_indicator@2x.png -text svneol=unset#unset
 /note_comment_table_threaded.png -text svneol=unset#unset
 /note_header_shadow.png -text svneol=unset#unset
 /note_header_shadow@2x.png -text svneol=unset#unset
