Added white notification icons for when cell is highlighted.
props @isaackeyet and welcome to github :)

--- a/.gitattributes
+++ b/.gitattributes
@@ -997,18 +997,30 @@ nl.lproj/Localizable.strings -text svneol=unset#unset
 /note_header_shadow@2x.png -text svneol=unset#unset
 /note_icon_achievement.png -text svneol=unset#unset
 /note_icon_achievement@2x.png -text svneol=unset#unset
+/note_icon_achievement_highlighted.png -text svneol=unset#unset
+/note_icon_achievement_highlighted@2x.png -text svneol=unset#unset
 /note_icon_comment.png -text svneol=unset#unset
 /note_icon_comment@2x.png -text svneol=unset#unset
+/note_icon_comment_highlighted.png -text svneol=unset#unset
+/note_icon_comment_highlighted@2x.png -text svneol=unset#unset
 /note_icon_follow.png -text svneol=unset#unset
 /note_icon_follow@2x.png -text svneol=unset#unset
+/note_icon_follow_highlighted.png -text svneol=unset#unset
+/note_icon_follow_highlighted@2x.png -text svneol=unset#unset
 /note_icon_like.png -text svneol=unset#unset
 /note_icon_like@2x.png -text svneol=unset#unset
+/note_icon_like_highlighted.png -text svneol=unset#unset
+/note_icon_like_highlighted@2x.png -text svneol=unset#unset
 /note_icon_placeholder.png -text svneol=unset#unset
 /note_icon_placeholder@2x.png -text svneol=unset#unset
 /note_icon_reblog.png -text svneol=unset#unset
 /note_icon_reblog@2x.png -text svneol=unset#unset
+/note_icon_reblog_highlighted.png -text svneol=unset#unset
+/note_icon_reblog_highlighted@2x.png -text svneol=unset#unset
 /note_icon_stats.png -text svneol=unset#unset
 /note_icon_stats@2x.png -text svneol=unset#unset
+/note_icon_stats_highlighted.png -text svneol=unset#unset
+/note_icon_stats_highlighted@2x.png -text svneol=unset#unset
 /note_navbar_icon_achievement.png -text svneol=unset#unset
 /note_navbar_icon_achievement@2x.png -text svneol=unset#unset
 /note_navbar_icon_comment.png -text svneol=unset#unset
