--- a/.gitattributes
+++ b/.gitattributes
@@ -275,6 +275,8 @@ Classes/WordPress.xcdatamodeld/WordPress[!!-~]7.xcdatamodel/elements -text svneo
 Classes/WordPress.xcdatamodeld/WordPress[!!-~]7.xcdatamodel/layout -text svneol=unset#unset
 Classes/WordPress.xcdatamodeld/WordPress[!!-~]8.xcdatamodel/elements -text svneol=unset#unset
 Classes/WordPress.xcdatamodeld/WordPress[!!-~]8.xcdatamodel/layout -text svneol=unset#unset
+Classes/WordPress.xcdatamodeld/WordPress[!!-~]9.xcdatamodel/elements -text svneol=unset#unset
+Classes/WordPress.xcdatamodeld/WordPress[!!-~]9.xcdatamodel/layout -text svneol=unset#unset
 Classes/WordPress.xcdatamodeld/WordPress.xcdatamodel/elements -text
 Classes/WordPress.xcdatamodeld/WordPress.xcdatamodel/layout -text
 Classes/WordPressAppDelegate.h -text
