In-app Notification Updates
 * Removed old sidebar_note icon
 * Added new sidebar_notifications for standard and highlighted state
 * Icon will be highlighted when a new notification is received and the
notifications view is not currently active.
 * Per IRC chat, removed UIAlert for in app notifications, since we now
have a visual indicator and sound when a new notification comes in.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1087,8 +1087,10 @@ pt.lproj/Localizable.strings -text svneol=unset#unset
 /sidebar_dashboard@2x.png -text
 /sidebar_footer_bg.png -text
 /sidebar_footer_bg@2x.png -text
-/sidebar_note.png -text svneol=unset#unset
-/sidebar_note@2x.png -text svneol=unset#unset
+/sidebar_notifications.png -text svneol=unset#unset
+/sidebar_notifications@2x.png -text svneol=unset#unset
+/sidebar_notifications_highlighted.png -text svneol=unset#unset
+/sidebar_notifications_highlighted@2x.png -text svneol=unset#unset
 /sidebar_pages.png -text
 /sidebar_pages@2x.png -text
 /sidebar_posts.png -text
